Add login input buttons & redirect page

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,7 +21,7 @@
       <form method="POST" action="/urls/<%= shortURL %>/edit">
         <label for="editURL"> New URL: </label>
         <input type="text" name="editURL" value= <%= longURL %>>
-        <button type="submit" class = "btn btn-primary ml-3"  >Submit</button>
+        <button type="submit" class = "btn btn-outline-primary"  >Submit</button>
       </form>
     </div>
   </div>
