--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,5 +10,11 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <div class="ms-auto">
+      <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
+        <input type="text" name="username" placeholder= Username class="form-control form-control-dark mr-sm-2">
+        <button type="submit" class = "btn btn-outline-dark my-2 my-sm-0">Login</button>
+      </form>
+    </div>
   </nav>
 </header>
