--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,6 +19,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Created Date</th>
           <th scope="col">Edit</th>
           <th scope="col">Delete</th>
 
@@ -29,6 +30,7 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><%= createdDate %></td>
             <td>
               <form method="get" action="/urls/<%= url %>/edit">
                 <button type="submit" class="btn btn-outline-primary">Edit</button>
