--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -17,14 +17,14 @@
   <h2 class="text-center mt-4 mb-2">Sign Up Here</h2>
   <div class="tab-content" id="pills-tabContent">
     <div class="tab-pane fade show active ml-5 mr-5 " >
-        <form method="post" id="singninFrom">
+        <form action="/register" method="POST">
           <div class="form-group text-left">
             <label class="font-weight-bold">Email <span class="text-danger">*</span></label>
-            <input type="email" name="email" id="email" class="form-control" placeholder="Enter email" required>
+            <input type="email" name="email" id="email" class="form-control" placeholder="Enter email" >
           </div>
           <div class="form-group text-left">
             <label class="font-weight-bold">Password <span class="text-danger">*</span></label>
-            <input type="password" name="password" id="password" class="form-control" placeholder="***********" required>
+            <input type="password" name="password" id="password" class="form-control" placeholder="***********" >
           </div>
           <div class="form-group">
             <input type="submit" name="signup" value="Sign Up" class="btn btn-block btn-success">
@@ -33,23 +33,6 @@
       </div>
     </div>
   </main>
-  <!-- <main class="login-form">
-    <h3 class="text-center m-3">Sign up Here</h3>
-    <div class="form-group ">
-    <form class="form-inline" action="/register" method="POST">
-      <div class="form-group m-2">
-        <label for="floatingInput">Email Address: </label>
-        <input id="floatingInput" type="email" class="form-control ml-2" name=email placeholder="Email Address">
-      </div>  
-    </form>
-    <form class="form-inline" action="/register" method="POST">
-      <div class="form-group m-2">
-        <label for="floatingPassword">Password: </label>
-        <input id="floatingInput" type="password" class="form-control ml-2" name="password" placeholder="Password">
-      </div>  
-    </form>
-  </div>
-  </main> -->
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
