--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <title>Register - TinyApp Example</title>
+  <title>Login - TinyApp Example</title>
 </head>
 <body>
   <header>
@@ -14,20 +14,20 @@
   </header>
   <main class="form-signin text-center">
   </ul>
-  <h2 class="text-center mt-4 mb-2">Create Account</h2>
+  <h2 class="text-center mt-4 mb-2">Please sign in</h2>
   <div class="tab-content" id="pills-tabContent">
     <div class="tab-pane fade show active ml-5 mr-5 " >
-        <form action="/register" method="POST">
+        <form action="/login" method="POST">
           <div class="form-group text-left">
-            <label class="font-weight-bold">Email <span class="text-danger">*</span></label>
-            <input type="email" name="email" id="email" class="form-control" placeholder="Enter email" >
+            <label class="font-weight-bold">Email</label>
+            <input type="email" name="email" id="email" class="form-control" placeholder="Enter email" required>
           </div>
           <div class="form-group text-left">
-            <label class="font-weight-bold">Password <span class="text-danger">*</span></label>
-            <input type="password" name="password" id="password" class="form-control" placeholder="Enter Password" >
+            <label class="font-weight-bold">Password</label>
+            <input type="password" name="password" id="password" class="form-control" placeholder="Enter password" required>
           </div>
           <div class="form-group">
-            <input type="submit" name="signup" value="Sign Up" class="btn btn-block btn-success">
+            <input type="submit" name="login" value="Log In" class="btn btn-block btn-success">
           </div>
         </form>
       </div>
