--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,11 +26,11 @@
         </tr>
       </thead>
       <tbody>
-        <% for(let url in urls) { %>
+        <% for(let url in userUrl) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
-            <td><%= createdDate %></td>
+            <td><%= userUrl[url].longURL %></td>
+            <td><%= date %></td>
             <td>
               <form method="get" action="/urls/<%= url %>/edit">
                 <button type="submit" class="btn btn-outline-primary">Edit</button>
