add hasedpassord feature

--- a/views/urls_error.ejs
+++ b/views/urls_error.ejs
@@ -15,9 +15,7 @@
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column text-center mt-3">
     <main class="px-3">
       <h1>Login or Sign-Up First</h1>
-      <p class="lead mt-3">To start using our <b>"TinyApp"</b>, first you need to login!
-        if you are currently not an existing customer <b>"NO PROBLEMO"</b>
-        Just go and sign up 📝 it's FREE to use!
+      <p class="lead mt-3">To start using our <b>"TinyApp"</b>, first you need to login!<br>If you are currently not an existing customer <br> <b>"NO PROBLEMO"</b><br>Just go and sign up 📝 it's FREE to use!
       </p>
       <div class="row justify-content-center">
       <div class="ms-auto form-inline p-3 content-center">
