fix buggs and add error messages

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,7 +21,7 @@
       <form method="POST" action="/urls/<%= shortURL %>/edit">
         <label for="editURL"> New URL: </label>
         <input type="text" name="editURL" value= <%= userUrl[shortURL].longURL %>>
-        <button type="submit" class = "btn btn-outline-primary"  >Submit</button>
+        <button type="submit" class = "btn btn-outline-primary"  >Update</button>
       </form>
     </div>
   </div>
