--- a/views/urls_error.ejs
+++ b/views/urls_error.ejs
@@ -13,12 +13,12 @@
     <%- include('partials/_header'); %>
   </header>
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column text-center mt-3">
-    <main class="px-3">
+    <main class="px-3 mt-3">
       <h1>Login or Sign-Up First</h1>
-      <p class="lead mt-3">To start using our <b>"TinyApp"</b>, first you need to login!<br>If you are currently not an existing customer <br> <b>"NO PROBLEMO"</b><br>Just go and sign up 📝 it's FREE to use!
+      <p class="lead mt-5">To start using our <b>"TinyApp"</b>, first you need to login!<br>If you are currently not an existing customer <br> <b>"NO PROBLEMO"</b><br>Just go and sign up 📝 it's FREE to use!
       </p>
       <div class="row justify-content-center">
-      <div class="ms-auto form-inline p-3 content-center">
+      <div class="ms-auto form-inline p-4 content-center">
         <form method="GET" action="/login" class="form-inline my-2 my-lg-0 mr-2">
           <button type="submit" class = "btn btn-outline-dark my-2 my-sm-0">Login</button>
         </form>
