--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -15,14 +15,18 @@
     <%- include('partials/_header') %>
     </header>
     <main style="margin: 1em;">
-      <h3>Create TinyURL</h3>
-      <form class="form-inline" action="/urls" method="POST">
+      <h3 class="text-center mt-5">Create TinyURL</h3>
+      <div class = "row justify-content-center mt-3">
+      <form class="form-inline text-center mt-3 " action="/urls" method="POST">
         <div class="form-group mb-2">
           <label for="longURL">Enter a URL:</label>
           <input class="form-control" type="text" name="longURL" value="http://" style="width: 300px; margin: 1em">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
+    </div>
+    <p class = "text-center lead p-2 mt-1">Simply <b>type</b> in a URL you want to <b>shorten</b> </p>
+    <p class = "text-center lead mt-1">then <b>click</b> the <b>submit</b> button 🪄</p>
     </main>
       <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
